testing/fail-lbnf/323-duplicate-token-definitions.cf
-- Andreas Abel, 2020-11-14
-- Raise error if token category is defined twice

token L {"a"};
token L {"b"};
